--- a/css/creative.css
+++ b/css/creative.css
@@ -1,6 +1,6 @@
 /*!
  * Start Bootstrap - Creative v5.1.8 (https://startbootstrap.com/template-overviews/creative)
- * Copyright 2013-2019 Start Bootstrap
+ * Copyright 2013-2019 Start Bxootstrap
  * Licensed under MIT (https://github.com/BlackrockDigital/startbootstrap-creative/blob/master/LICENSE)
  */
 
@@ -9695,8 +9695,10 @@ header.masthead h1 {
 }
 
 #portfolio .container-fluid .portfolio-box {
-  position: relative;
-  display: block;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
 }
 
 #portfolio .container-fluid .portfolio-box .portfolio-box-caption {
@@ -9705,11 +9707,10 @@ header.masthead h1 {
   justify-content: center;
   flex-direction: column;
   width: 100%;
-  height: 100%;
+  height: 30%;
   position: absolute;
-  bottom: 0;
   text-align: center;
-  opacity: 0;
+  opacity: 0.8;
   color: #fff;
   background: rgba(244, 98, 58, 0.9);
   transition: opacity 0.25s ease;
@@ -9728,5 +9729,42 @@ header.masthead h1 {
 }
 
 #portfolio .container-fluid .portfolio-box:hover .portfolio-box-caption {
+  opacity: 1;
+}
+
+#portfolio .container-fluid .company-name-box {
+  position: relative;
+  display: block;
+}
+
+#portfolio .container-fluid .company-name-box .portfolio-box-caption {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  bottom: 0;
+  text-align: center;
+  opacity: 1;
+  color: #fff;
+  background: rgba(244, 98, 58, 0.9);
+  transition: opacity 0.25s ease;
+  text-align: center;
+}
+
+#portfolio .container-fluid .company-name-box .portfolio-box-caption .project-category {
+  font-family: "Merriweather Sans", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  font-size: 0.85rem;
+  font-weight: 600;
+  text-transform: uppercase;
+}
+
+#portfolio .container-fluid .company-name-box .portfolio-box-caption .project-name {
+  font-size: 1.2rem;
+}
+
+#portfolio .container-fluid .company-name-box:hover .portfolio-box-caption {
   opacity: 1;
 }
