--- a/css/creative.css
+++ b/css/creative.css
@@ -9708,6 +9708,7 @@ header.masthead h1 {
   flex-direction: column;
   width: 100%;
   height: 30%;
+  min-height: 50px;
   position: absolute;
   text-align: center;
   opacity: 0.8;
@@ -9767,4 +9768,37 @@ header.masthead h1 {
 
 #portfolio .container-fluid .company-name-box:hover .portfolio-box-caption {
   opacity: 1;
+}
+
+.bg-faded {
+  background-color: rgba(255, 255, 255, 0.85);
+}
+
+.intro {
+  position: relative;
+}
+
+@media (min-width: 992px) {
+  .intro .intro-img {
+    width: 75%;
+    float: right;
+  }
+  .intro .intro-text {
+    left: 0;
+    width: 60%;
+    margin-top: 3rem;
+    position: absolute;
+  }
+  .intro .intro-text .intro-button {
+    width: 100%;
+    left: 0;
+    position: absolute;
+    bottom: -2rem;
+  }
+}
+
+@media (min-width: 1200px) {
+  .intro .intro-text {
+    width: 45%;
+  }
 }
