--- a/scss/_portfolio.scss
+++ b/scss/_portfolio.scss
@@ -16,7 +16,7 @@
 
         width: 100%;
         height: 30%;
-
+        min-height: 50px;
         position: absolute;
 
         text-align: center;
