--- a/scss/_global.scss
+++ b/scss/_global.scss
@@ -39,3 +39,8 @@ hr.light {
 .page-section {
   padding: 8rem 0;
 }
+
+.brand-logo {
+  font-family: "Brush Script MT", serif;
+  font-size: 55px;
+}
