--- a/scss/_navbar.scss
+++ b/scss/_navbar.scss
@@ -1,12 +1,14 @@
 // Base styling for the navbar
+
 #mainNav {
   box-shadow: $box-shadow;
   background-color: $white;
   transition: background-color 0.2s ease;
   .navbar-brand {
-    font-family: $font-family-sans-serif;
+    font-family: "Brush Script MT";
     font-weight: $font-weight-bold;
     color: $gray-900;
+    font-size: 50px;
   }
   .navbar-nav {
     .nav-item {
