--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -3,7 +3,7 @@
 // Color overrides
 
 // Set a custom color
-$orange: #f4623a !default;
+$orange: #f4a924 !default;
 $brown: #5c4d42 !default;
 
 // Set primary color to orange
@@ -19,4 +19,4 @@ $font-family-base: $font-family-serif !default;
 $headings-font-family: $font-family-sans-serif !default;
 
 // Custom variables
-$navbar-height: 72px;
+$navbar-height: 120px;
