--- a/scss/creative.scss
+++ b/scss/creative.scss
@@ -9,4 +9,4 @@
 @import "./navbar.scss";
 @import "./masthead.scss";
 @import "./portfolio.scss";
-@import "./traier.scss";
+@import "./trailer.scss";
